[package]
name = "wasm_regression"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.93"
getrandom = { version = "*", features = ["js"] }
faer = {version = "0.18.2", features = ["nightly"]}
faer-ext = {version = "0.1.0", features = ["ndarray"]}
ndarray = "0.15"
js-sys = "0.3.70"

[dev-dependencies]
wasm-bindgen-cli = "0.2.92"

[profile.release]
opt-level = 's'
strip = "debuginfo"
lto = true
